src/test/ui/object-safety/object-safety-associated-consts.object_safe_for_dispatch.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-associated-consts.rs:14:5
   |
LL |     t
   |     ^ `Bar` cannot be made into an object
   |
   = help: consider moving `X` to another trait
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-associated-consts.rs:9:11
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     const X: usize;
   |           ^ ...because it contains this associated `const`
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Bar>` for `&T`
   = note: required by cast to type `&dyn Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
